[project]
name = "viking"
version = "0.1.1"
description = "ACDC Presentation Handler library"
readme = "README.md"
authors = [
    { name = "Kevin Griffin", email = "kevin.griffin@gleif.org" }
]
requires-python = ">=3.12.6"
dependencies = [
    "keri==1.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mockito>=1.5.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
